# Anaar3D

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_script.sh
App/: CMakeLists.txt  main.cpp
Dependencies/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
Framework/: CMakeLists.txt
Framework/include/AnaarDana/: glfw_test.hpp  glm_test.hpp  imgui_test.hpp
Framework/src/: glfw_test.cpp  glm_test.cpp  imgui_test.cpp
Framework/src/math/: adder.cpp  subtractor.cpp
app/: CMakeLists.txt  main.cpp
app/gui/src/: main.cpp
app/include/: test.hpp
app/src/: test.cpp
console/: CMakeLists.txt  main.cpp
example/gui/src/: main.cpp
framework/: CMakeLists.txt
framework/include/Anaar/: PrimitiveRenderer.hpp  Shader.hpp  _pch.hpp  core_test.hpp  glfw_test.hpp  glm_test.hpp  imgui_test.hpp  test.hpp
framework/include/Anaar/math/: adder.hpp  subtractor.hpp
framework/resources/shaders/: test.vs  texture.fs
framework/shaders/: test.vs
framework/src/: PrimitiveRenderer.cpp  Shader.cpp  glfw_test.cpp  glm_test.cpp  imgui_test.cpp  test.cpp
framework/src/math/: adder.cpp  subtractor.cpp
include/: AnaarContext.hpp  AnaarGL.hpp  Context.hpp  Model.hpp  elementBuffer.hpp  shader.hpp  test.hpp  texture.hpp  vertexArray.hpp  vertexBuffer.hpp
include/Anaar3D/: AnaarGL.hpp  Core.hpp  Mesh.hpp  Primitive.hpp  core.hpp
include/AnaarGL/: ElementBuffer.hpp  Shader.hpp  VertexArray.hpp  VertexBuffer.hpp
include/Mesh/: IMesh.hpp  QuadMesh.hpp  TriangleMesh.hpp
include/Primitive/: Triangle.hpp
projects/example/: test.cpp
scripts/: buil.sh  configure.sh  run.sh  setup_submodules.sh
src/: AnaarContext.cpp  CMakeLists.txt  Context.cpp  Model.cpp  context.cpp  elementBuffer.cpp  implot_imgui.cpp  main  main.cpp  shader.cpp  test.cpp  testRenderer.cpp  texture.cpp  vertexArray.cpp  vertexBuffer.cpp
src/AnaarGL/: ElementBuffer.cpp  Shader.cpp  VertexArray.cpp  VertexBuffer.cpp
src/Mesh/: QuadMesh.cpp  TriangleMesh.cpp
src/Primitive/: Triangle.cpp
src/core/: adder.cpp  subtractor.cpp
test/: my_test.cpp
